--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ description = "ITK-SNAP interactive deep learning segmentation server"
 dependencies = [
     'fastapi[standard]',
     'nnInteractive',
-    'huggingface_hub'
+    'huggingface_hub',
+    'ngrok'
 ]
 readme = "README.md"
 requires-python = ">=3.10"
