--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "itksnap-dls"
-version = "0.0.8"
+version = "0.0.9"
 authors = [
   { name="Paul Yushkevich", email="pyushkevich@gmail.com" },
 ]
@@ -9,7 +9,8 @@ dependencies = [
     'fastapi[standard]',
     'nnInteractive',
     'huggingface_hub',
-    'ngrok'
+    'ngrok',
+    'torch<=2.8.0'
 ]
 readme = "README.md"
 requires-python = ">=3.10"
